--- a/contos/ContosVdV.html
+++ b/contos/ContosVdV.html
@@ -426,7 +426,7 @@
   </script>
 
   <!-- ====== Música de fundo ====== -->
-  <audio id="bgm" src="coralchamber.mp3" loop preload="auto"></audio>
+  <audio id="bgm" src="imagens/coralchamber.mp3" loop preload="auto"></audio>
   <script>
     (function() {
       const audio = document.getElementById('bgm');
