--- a/webLivros/WebLivroAUC.html
+++ b/webLivros/WebLivroAUC.html
@@ -161,7 +161,7 @@
   <div class="progress-wrap">
     <div class="max-w-4xl mx-auto px-4">
       <div class="flex items-center gap-3 py-3 text-sm">
-        <a href="index.html#contos" class="px-3 py-1.5 rounded-lg border border-white/20 hover:bg-white/10 transition">Voltar</a>
+        <a href="../obras/auc.html" class="px-3 py-1.5 rounded-lg border border-white/20 hover:bg-white/10 transition">Voltar</a>
         <div class="pill px-3 py-1.5 rounded-full uppercase tracking-wide">A Última Colheita</div>
 
         <div class="ml-auto flex items-center gap-2">
@@ -583,7 +583,7 @@
 
       btnOk.addEventListener('click', validate);
       input.addEventListener('keydown', (e)=> { if(e.key === 'Enter') validate(); });
-      btnNo.addEventListener('click', ()=> { window.location.href = 'index.html#contos'; });
+      btnNo.addEventListener('click', ()=> { window.location.href = '../obras/auc.html'; });
     });
   })();
   </script>
