--- a/webLivros/WebLivroIdW.html
+++ b/webLivros/WebLivroIdW.html
@@ -183,7 +183,7 @@
   <div class="progress-wrap">
     <div class="max-w-4xl mx-auto px-4">
       <div class="flex items-center gap-3 py-3 text-sm">
-        <a href="index.html#contos"
+        <a href="../obras/idw.html"
            class="px-3 py-1.5 rounded-lg border border-white/20 hover:bg-white/10 transition">
           Voltar
         </a>
@@ -1280,7 +1280,7 @@ E quando isso acontecer, alguém precisará estar disposta a descobrir — e sob
 
     btnOk.addEventListener('click', validate);
     input.addEventListener('keydown', (e)=> { if(e.key === 'Enter') validate(); });
-    btnNo.addEventListener('click', ()=> { window.location.href = 'index.html'; });
+    btnNo.addEventListener('click', ()=> { window.location.href = '../obras/idw.html'; });
   });
 })();
 </script>
