--- a/paginasprincipais/loja.html
+++ b/paginasprincipais/loja.html
@@ -145,9 +145,9 @@
     <!-- menu mobile -->
     <div class="md:hidden max-w-6xl mx-auto px-4 pb-3">
       <div class="flex flex-wrap gap-2">
-        <a href="../index.html" class="btn btn-ghost !py-2">Início</a>
-        <a href="../sobreautor.html" class="btn btn-ghost !py-2">Sobre</a>
-        <a href="../contos.html" class="btn btn-ghost !py-2">Contos</a>
+        <a href="index.html" class="btn btn-ghost !py-2">Início</a>
+        <a href="sobreautor.html" class="btn btn-ghost !py-2">Sobre</a>
+        <a href="contos.html" class="btn btn-ghost !py-2">Contos</a>
       </div>
     </div>
   </nav>
