--- a/obras/auc.html
+++ b/obras/auc.html
@@ -229,7 +229,7 @@
   <nav class="glass sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <div class="flex items-center gap-3">
-        <a href="../paginasprincipais/index.html" class="inline-flex items-center gap-2">
+        <a href="../docs/index.html" class="inline-flex items-center gap-2">
           <img src="../imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
         </a>
 
@@ -259,12 +259,12 @@
           <button id="temaEscuroM" class="theme-dot" title="Tema escuro" aria-label="Tema escuro"></button>
         </div>
 
-        <a href="../paginasprincipais/index.html" class="btn btn-ghost hidden md:inline-flex">Início</a>
-        <a href="../paginasprincipais/loja.html" class="btn btn-ghost hidden md:inline-flex">Loja</a>
-        <a href="../paginasprincipais/sobreautor.html" class="btn btn-ghost hidden md:inline-flex">Sobre</a>
-        <a href="../paginasprincipais/contos.html" class="btn btn-ghost hidden md:inline-flex">Contos</a>
+        <a href="../docs/index.html" class="btn btn-ghost hidden md:inline-flex">Início</a>
+        <a href="../docs/loja.html" class="btn btn-ghost hidden md:inline-flex">Loja</a>
+        <a href="../docs/sobreautor.html" class="btn btn-ghost hidden md:inline-flex">Sobre</a>
+        <a href="../docs/contos.html" class="btn btn-ghost hidden md:inline-flex">Contos</a>
 
-        <a href="../paginasprincipais/index.html#obrasProjetos" class="btn btn-primary !px-4 !py-2">Voltar</a>
+        <a href="../docs/index.html#obrasProjetos" class="btn btn-primary !px-4 !py-2">Voltar</a>
       </div>
     </div>
   </nav>
@@ -488,7 +488,7 @@
     tipo: OBRA.tipo,
     accessUrl: OBRA.accessUrl
   }));
-  window.location.href = `../paginasprincipais/pagamento.html?add=${item}`;
+  window.location.href = `../docs/pagamento.html?add=${item}`;
 }
 
 
