--- a/contos.html
+++ b/contos.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="Estante de Contos — Estante de Histórias" />
   <meta property="og:description" content="Uma coleção de contos curtos e histórias paralelas." />
-  <meta property="og:image" content="../imagens/favicon.png" />
+  <meta property="og:image" content="imagens/favicon.png" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pt_BR" />
 
@@ -110,7 +110,7 @@
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <div class="flex items-center gap-3">
         <a href="index.html" class="inline-flex items-center gap-2">
-          <img src="../imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
+          <img src="imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
         </a>
 
         <div class="hidden sm:flex items-center gap-2">
@@ -260,7 +260,7 @@
         id: "o-natal",
         titulo: "O Natal",
         desc: "Um conto sobre o tempo que passa e o que se recusa a mudar, contado através de um Natal que permanece.",
-        imagem: "../imagens/ContoONCapa.png",
+        imagem: "imagens/ContoONCapa.png",
         link: "../contos/ContosON.html",
         tags: ["emocional"]
       },
@@ -268,7 +268,7 @@
         id: "meu-universo",
         titulo: "Meu Universo",
         desc: "Um conto ambientado entre estrelas, silêncio e decisões que mudam rotas.",
-        imagem: "../imagens/ContoMUcapa.png",
+        imagem: "imagens/ContoMUcapa.png",
         link: "../contos/ContosMeuUniverso.html",
         tags: ["emocional"]
       },
@@ -276,7 +276,7 @@
         id: "a-voz-do-vazio",
         titulo: "A voz do vazio",
         desc: "Um conto sobre o luto e a esperança, contado através de reinos que caem e ascendem do vazio.",
-        imagem: "../imagens/ContoVdVcapa.png",
+        imagem: "imagens/ContoVdVcapa.png",
         link: "../contos/ContosVdV.html",
         tags: ["emocional"]
       },
@@ -284,7 +284,7 @@
         id: "meus-monstros",
         titulo: "Meus Monstros",
         desc: "Um conto sobre insegurança e dores carregadas pela vida.",
-        imagem: "../imagens/ContosMM.jpg",
+        imagem: "imagens/ContosMM.jpg",
         link: "../contos/ContosMM.html",
         tags: ["suspense"]
       },
@@ -292,7 +292,7 @@
         id: "jardineiro-do-inferno",
         titulo: "Jardineiro do Inferno",
         desc: "Um conto sobre suspense e horror de uma vida miserável.",
-        imagem: "../imagens/ContoJdIcapa.png",
+        imagem: "imagens/ContoJdIcapa.png",
         link: "../contos/ContosJdI.html",
         tags: ["suspense"]
       }
