--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" type="image/png" href="../imagens/favicon.png">
+  <link rel="icon" type="image/png" href="imagens/favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Estante de Histórias</title>
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="Estante de Histórias — Livros, WebLivros e Áudio-séries de P. H. Falcaro" />
   <meta property="og:description" content="Universos conectados. Livros, WebLivros, contos e áudio-séries originais." />
-  <meta property="og:image" content="../imagens/favicon.png" />
+  <meta property="og:image" content="imagens/favicon.png" />
   <meta property="og:url" content="https://estantedehistorias.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Estante de Histórias" />
@@ -252,7 +252,7 @@
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <div class="flex items-center gap-3">
         <a href="index.html" class="inline-flex items-center gap-2">
-          <img src="../imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
+          <img src="imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
         </a>
 
         <div class="hidden sm:flex items-center gap-2">
@@ -329,12 +329,12 @@
 
             <div class="relative surface p-4 sm:p-5 grid grid-cols-3 gap-3 !shadow-none"
                  style="background: rgba(255,255,255,.55); border-color: rgba(226,232,240,.7);">
-              <img src="../imagens/LdC1.png" alt="Capa — A Lenda do Caos" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
-              <img src="../imagens/IdW.jpg"  alt="Capa — O Incidente de Willowbrook" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
-              <img src="../imagens/AdC1.jpg" alt="Capa — Além dos Céus" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
-              <img src="../imagens/AUCcapa.png" alt="Capa — A Última Colheita" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
-              <img src="../imagens/AdCE.jpg" alt="Capa — Além dos Céus: Echos" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
-              <img src="../imagens/ContoMUcapa.png" alt="Capa — Conto" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/LdC1.png" alt="Capa — A Lenda do Caos" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/IdW.jpg"  alt="Capa — O Incidente de Willowbrook" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/AdC1.jpg" alt="Capa — Além dos Céus" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/AUCcapa.png" alt="Capa — A Última Colheita" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/AdCE.jpg" alt="Capa — Além dos Céus: Echos" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
+              <img src="imagens/ContoMUcapa.png" alt="Capa — Conto" class="w-full aspect-[3/4] object-cover rounded-2xl border" style="border-color: var(--border);" />
             </div>
           </div>
         </div>
