--- a/obras/adc-spf.html
+++ b/obras/adc-spf.html
@@ -226,12 +226,12 @@
           <button id="temaEscuroM" class="theme-dot" title="Tema escuro" aria-label="Tema escuro"></button>
         </div>
 
-        <a href="../docs/index.html" class="btn btn-ghost hidden md:inline-flex">Início</a>
-        <a href="../docs/loja.html" class="btn btn-ghost hidden md:inline-flex">Loja</a>
-        <a href="../docs/sobreautor.html" class="btn btn-ghost hidden md:inline-flex">Sobre</a>
-        <a href="../docs/contos.html" class="btn btn-ghost hidden md:inline-flex">Contos</a>
+        <a href="../index.html" class="btn btn-ghost hidden md:inline-flex">Início</a>
+        <a href="../loja.html" class="btn btn-ghost hidden md:inline-flex">Loja</a>
+        <a href="../sobreautor.html" class="btn btn-ghost hidden md:inline-flex">Sobre</a>
+        <a href="../contos.html" class="btn btn-ghost hidden md:inline-flex">Contos</a>
 
-        <a href="../docs/index.html#obrasProjetos" class="btn btn-primary !px-4 !py-2">Voltar</a>
+        <a href="../index.html#obrasProjetos" class="btn btn-primary !px-4 !py-2">Voltar</a>
       </div>
     </div>
   </nav>
