--- a/sobreautor.html
+++ b/sobreautor.html
@@ -77,7 +77,7 @@
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <div class="flex items-center gap-3">
         <a href="index.html" class="inline-flex items-center gap-2">
-          <img src="../imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
+          <img src="imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-10 w-auto select-none" />
         </a>
 
         <div class="hidden sm:flex items-center gap-2">
