--- a/loja.html
+++ b/loja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" type="image/png" href="../imagens/favicon.png">
+  <link rel="icon" type="image/png" href="imagens/favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Loja de Histórias — Estante de Histórias</title>
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="Loja de Histórias — Estante de Histórias" />
   <meta property="og:description" content="Compre livros e WebLivros. Adicione à sacola e finalize sua compra." />
-  <meta property="og:image" content="../imagens/favicon.png" />
+  <meta property="og:image" content="imagens/favicon.png" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pt_BR" />
 
@@ -123,7 +123,7 @@
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-3">
       <div class="flex items-center gap-3">
         <a href="index.html" class="inline-flex items-center gap-2">
-          <img src="../imagens/LogoSite.png" class="h-9" alt="Logo">
+          <img src="imagens/LogoSite.png" class="h-9" alt="Logo">
         </a>
 
         <button id="temaClaro" class="theme-dot" title="Tema claro" aria-label="Tema claro"></button>
@@ -209,9 +209,9 @@
 
 /* ===== Produtos ===== */
 const PRODUTOS=[
- {id:'ldc1',tipo:'livro',titulo:'A Lenda do Caos — Tríplice Caótica',preco:57.9,imagem:'../imagens/LdC1.png',link:'../obras/ldc1.html'},
- {id:'idw',tipo:'weblivro',titulo:'O Incidente de Willowbrook',preco:5.9,imagem:'../imagens/IdW.jpg',link:'../obras/idw.html'},
- {id:'auc',tipo:'weblivro',titulo:'A Última Colheita',preco:2.5,imagem:'../imagens/AUCcapa.png',link:'../obras/auc.html'}
+ {id:'ldc1',tipo:'livro',titulo:'A Lenda do Caos — Tríplice Caótica',preco:57.9,imagem:'imagens/LdC1.png',link:'../obras/ldc1.html'},
+ {id:'idw',tipo:'weblivro',titulo:'O Incidente de Willowbrook',preco:5.9,imagem:'imagens/IdW.jpg',link:'../obras/idw.html'},
+ {id:'auc',tipo:'weblivro',titulo:'A Última Colheita',preco:2.5,imagem:'imagens/AUCcapa.png',link:'../obras/auc.html'}
 ];
 
 let filtro='todos';
